# airsim-project

./: README.md
pyqt_live_tuner/: MANIFEST.in  README.md  config.json  pyproject.toml  setup.py
pyqt_live_tuner/docs/: conf.py  index.rst
pyqt_live_tuner/docs/advanced_usage/: index.rst
pyqt_live_tuner/docs/examples/: index.rst
pyqt_live_tuner/old/: application_builder.py  main_application.py
pyqt_live_tuner/old/containers/: __init__.py  configurations_container.py  parameters_container.py
pyqt_live_tuner/old/parameter_groups/: __init__.py  independent_group_widget.py  linked_group_widget.py  parameter_group_widget.py
pyqt_live_tuner/old/parameter_widgets/: __init__.py  action_parameter_widget.py  bool_parameter_widget.py  dropdown_parameter_widget.py  float_parameter_widget.py  parameter_widget.py  string_parameter_widget.py
pyqt_live_tuner/pyqt_live_tuner/: app.py  example.py  file_handler.py  logger.py  main_window.py
pyqt_live_tuner/pyqt_live_tuner/displays/: base_display.py  image.py
pyqt_live_tuner/pyqt_live_tuner/groups/: __init__.py  linked_parameter_group.py  parameter_group.py
pyqt_live_tuner/pyqt_live_tuner/panels/: __init__.py  config_panel.py  parameter_panel.py
pyqt_live_tuner/pyqt_live_tuner/parameters/: __init__.py  action_parameter.py  parameter.py  (+7 more)
pyqt_live_tuner/tests/: test_main_application.py
pyqt_live_tuner/tests_industrial/: conftest.py  test_application_builder.py  test_dropdown_parameter_widget.py  test_float_parameter_widget.py  test_main_application.py  test_multi_select_parameter_widget.py  test_parameters_container.py
(+64 files in other folders)
