[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyqt-live-tuner"
version = "0.1.0"
description = "Live parameter tuning with PyQt"
authors = [{ name = "", email = "" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["PyQt5", "pyqtdarktheme"]

[tool.setuptools.packages.find]
include = ["pyqt_live_tuner", "pyqt_live_tuner.*"]
